--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -765,8 +765,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .top-\[13\%\] {
   top: 13%;
 }
-.left-\[10px\] {
-  left: 10px;
+.left-\[-100px\] {
+  left: -100px;
 }
 .top-\[-18px\] {
   top: -18px;
@@ -891,9 +891,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .top-\[64px\] {
   top: 64px;
 }
-.left-\[-100px\] {
-  left: -100px;
-}
 .z-10 {
   z-index: 10;
 }
@@ -918,11 +915,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .z-\[1050\] {
   z-index: 1050;
 }
-.z-\[22\] {
-  z-index: 22;
-}
 .z-40 {
   z-index: 40;
+}
+.z-\[22\] {
+  z-index: 22;
 }
 .col-span-2 {
   grid-column: span 2 / span 2;
@@ -957,14 +954,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .row-\[1\/1\] {
   grid-row: 1 / 1;
 }
-.row-span-4 {
-  grid-row: span 4 / span 4;
+.row-span-1 {
+  grid-row: span 1 / span 1;
 }
 .row-span-3 {
   grid-row: span 3 / span 3;
 }
-.row-span-1 {
-  grid-row: span 1 / span 1;
+.row-span-4 {
+  grid-row: span 4 / span 4;
 }
 .row-start-1 {
   grid-row-start: 1;
@@ -974,9 +971,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .row-start-3 {
   grid-row-start: 3;
-}
-.row-start-4 {
-  grid-row-start: 4;
 }
 .float-left {
   float: left;
@@ -1035,10 +1029,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
-}
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 .mt-10 {
   margin-top: 2.5rem;
@@ -1280,6 +1270,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-h-60 {
   max-height: 15rem;
 }
+.min-h-\[80px\] {
+  min-height: 80px;
+}
 .min-h-fullBot {
   min-height: calc(100vh - env(safe-area-inset-bottom));
 }
@@ -1336,6 +1329,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-\[300px\] {
   width: 300px;
+}
+.w-\[53px\] {
+  width: 53px;
 }
 .w-\[5\%\] {
   width: 5%;
@@ -1408,12 +1404,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-\[32px\] {
   width: 32px;
-}
-.w-\[73px\] {
-  width: 73px;
-}
-.w-\[53px\] {
-  width: 53px;
 }
 .min-w-\[320px\] {
   min-width: 320px;
@@ -1510,6 +1500,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .max-w-\[290px\] {
   max-width: 290px;
+}
+.max-w-\[1450px\] {
+  max-width: 1450px;
 }
 .max-w-\[220px\] {
   max-width: 220px;
@@ -1779,6 +1772,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-\[13px\] {
   border-radius: 13px;
 }
+.rounded-\[10px\] {
+  border-radius: 10px;
+}
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -1898,6 +1894,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(153 246 228 / var(--tw-bg-opacity));
 }
+.bg-secondary-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(237 216 178 / var(--tw-bg-opacity));
+}
+.bg-primary-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 214 199 / var(--tw-bg-opacity));
+}
+.bg-sage-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 245 246 / var(--tw-bg-opacity));
+}
 .bg-sage-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(53 65 66 / var(--tw-bg-opacity));
@@ -1953,10 +1961,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-primary-700 {
   background-color: var(--primary-plum-700);
 }
-.bg-primary-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 214 199 / var(--tw-bg-opacity));
-}
 .bg-success-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(217 229 229 / var(--tw-bg-opacity));
@@ -1988,14 +1992,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(240 227 220 / var(--tw-bg-opacity));
 }
-.bg-sage-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 245 246 / var(--tw-bg-opacity));
-}
-.bg-secondary-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(237 216 178 / var(--tw-bg-opacity));
-}
 .bg-contain {
   background-size: contain;
 }
@@ -2026,6 +2022,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-6 {
   padding: 1.5rem;
 }
+.p-2 {
+  padding: 0.5rem;
+}
 .p-10 {
   padding: 2.5rem;
 }
@@ -2034,9 +2033,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .p-7 {
   padding: 1.75rem;
-}
-.p-2 {
-  padding: 0.5rem;
 }
 .p-\[10px\] {
   padding: 10px;
@@ -2107,6 +2103,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-\[38px\] {
   padding-left: 38px;
   padding-right: 38px;
+}
+.py-\[5\%\] {
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -2226,6 +2226,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pt-4 {
   padding-top: 1rem;
 }
+.pl-4 {
+  padding-left: 1rem;
+}
 .pt-\[100px\] {
   padding-top: 100px;
 }
@@ -2282,9 +2285,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .pb-16 {
   padding-bottom: 4rem;
-}
-.pl-4 {
-  padding-left: 1rem;
 }
 .text-left {
   text-align: left;
@@ -2412,9 +2412,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .leading-5 {
   line-height: 1.25rem;
-}
-.leading-3 {
-  line-height: .75rem;
 }
 .tracking-widest {
   letter-spacing: 0.1em;
@@ -3033,6 +3030,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(105 151 151 / var(--tw-bg-opacity));
 }
+.hover\:-translate-y-3:hover {
+  --tw-translate-y: -0.75rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .hover\:scale-\[1\.2\]:hover {
   --tw-scale-x: 1.2;
   --tw-scale-y: 1.2;
@@ -3093,6 +3094,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:shadow-xxl-red:hover {
   --tw-shadow: 27px 28px 43px 13px rgba(176, 131, 131, 0.24);
   --tw-shadow-colored: 27px 28px 43px 13px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.hover\:shadow-2xl:hover {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .hover\:ring:hover {
@@ -3323,8 +3329,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:left-\[50\%\] {
     left: 50%;
   }
-  .tablet\:left-\[-20px\] {
-    left: -20px;
+  .tablet\:left-\[-120px\] {
+    left: -120px;
   }
   .tablet\:right-\[-220px\] {
     right: -220px;
@@ -3383,9 +3389,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:top-\[50px\] {
     top: 50px;
   }
-  .tablet\:left-\[-120px\] {
-    left: -120px;
-  }
   .tablet\:z-20 {
     z-index: 20;
   }
@@ -3410,14 +3413,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:col-span-7 {
     grid-column: span 7 / span 7;
   }
-  .tablet\:col-span-4 {
-    grid-column: span 4 / span 4;
-  }
   .tablet\:col-span-8 {
     grid-column: span 8 / span 8;
-  }
-  .tablet\:col-span-11 {
-    grid-column: span 11 / span 11;
   }
   .tablet\:col-start-8 {
     grid-column-start: 8;
@@ -3434,17 +3431,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:col-start-10 {
     grid-column-start: 10;
   }
+  .tablet\:col-start-4 {
+    grid-column-start: 4;
+  }
   .tablet\:col-start-1 {
     grid-column-start: 1;
   }
   .tablet\:col-start-7 {
     grid-column-start: 7;
-  }
-  .tablet\:col-start-4 {
-    grid-column-start: 4;
-  }
-  .tablet\:col-start-5 {
-    grid-column-start: 5;
   }
   .tablet\:col-end-8 {
     grid-column-end: 8;
@@ -3483,6 +3477,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-top: 0px;
     margin-bottom: 0px;
   }
+  .tablet\:mx-4 {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
   .tablet\:my-20 {
     margin-top: 5rem;
     margin-bottom: 5rem;
@@ -3494,10 +3492,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:mx-auto {
     margin-left: auto;
     margin-right: auto;
-  }
-  .tablet\:mx-4 {
-    margin-left: 1rem;
-    margin-right: 1rem;
   }
   .tablet\:mr-2 {
     margin-right: 0.5rem;
@@ -3680,6 +3674,9 @@ Ensure the default browser behavior of the `hidden` attribute.
     --tw-rotate: 45deg;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
+  .tablet\:grid-flow-row {
+    grid-auto-flow: row;
+  }
   .tablet\:grid-cols-tablet {
     grid-template-columns: minmax(0,1fr) repeat(12,minmax(30px,72.5px)) minmax(0,1fr);;
   }
@@ -3760,6 +3757,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-left: 3rem;
     padding-right: 3rem;
   }
+  .tablet\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
   .tablet\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -3779,14 +3780,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:py-\[52px\] {
     padding-top: 52px;
     padding-bottom: 52px;
-  }
-  .tablet\:py-24 {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-  .tablet\:px-\[2\%\] {
-    padding-left: 2%;
-    padding-right: 2%;
   }
   .tablet\:pt-0 {
     padding-top: 0px;
@@ -3876,6 +3869,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:bottom-\[-6\%\] {
     bottom: -6%;
   }
+  .laptop\:top-\[5\%\] {
+    top: 5%;
+  }
   .laptop\:top-\[-50px\] {
     top: -50px;
   }
@@ -3933,9 +3929,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:top-\[-40px\] {
     top: -40px;
   }
-  .laptop\:top-\[5\%\] {
-    top: 5%;
-  }
   .laptop\:z-0 {
     z-index: 0;
   }
@@ -3954,11 +3947,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:col-span-12 {
     grid-column: span 12 / span 12;
   }
-  .laptop\:col-span-9 {
-    grid-column: span 9 / span 9;
-  }
   .laptop\:col-start-3 {
     grid-column-start: 3;
+  }
+  .laptop\:col-start-5 {
+    grid-column-start: 5;
   }
   .laptop\:col-start-2 {
     grid-column-start: 2;
@@ -3968,9 +3961,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:col-start-8 {
     grid-column-start: 8;
-  }
-  .laptop\:col-start-5 {
-    grid-column-start: 5;
   }
   .laptop\:col-end-\[8\] {
     grid-column-end: 8;
@@ -4008,10 +3998,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-left: 40px;
     margin-right: 40px;
   }
-  .laptop\:mx-4 {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
   .laptop\:mb-8 {
     margin-bottom: 2rem;
   }
@@ -4029,6 +4015,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:mb-0 {
     margin-bottom: 0px;
+  }
+  .laptop\:mb-16 {
+    margin-bottom: 4rem;
   }
   .laptop\:mr-0 {
     margin-right: 0px;
@@ -4069,9 +4058,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:mr-8 {
     margin-right: 2rem;
   }
-  .laptop\:mb-16 {
-    margin-bottom: 4rem;
-  }
   .laptop\:flex {
     display: flex;
   }
@@ -4090,6 +4076,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:w-\[400px\] {
     width: 400px;
   }
+  .laptop\:w-\[73px\] {
+    width: 73px;
+  }
   .laptop\:w-\[550px\] {
     width: 550px;
   }
@@ -4101,9 +4090,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:w-auto {
     width: auto;
-  }
-  .laptop\:w-\[73px\] {
-    width: 73px;
   }
   .laptop\:min-w-\[1009px\] {
     min-width: 1009px;
@@ -4212,15 +4198,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:bg-transparent {
     background-color: transparent;
   }
-  .laptop\:p-0 {
-    padding: 0px;
-  }
   .laptop\:p-4 {
     padding: 1rem;
+  }
+  .laptop\:p-0 {
+    padding: 0px;
   }
   .laptop\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+  .laptop\:px-\[2\%\] {
+    padding-left: 2%;
+    padding-right: 2%;
   }
   .laptop\:px-10 {
     padding-left: 2.5rem;
@@ -4237,14 +4227,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
-  }
-  .laptop\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-  .laptop\:px-\[2\%\] {
-    padding-left: 2%;
-    padding-right: 2%;
   }
   .laptop\:pb-7 {
     padding-bottom: 1.75rem;
@@ -4297,6 +4279,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 1.5rem;
     line-height: 1.75rem;
   }
+  .laptop\:text-xl {
+    font-size: 1.25rem;
+    line-height: 2rem;
+  }
+  .laptop\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
   .laptop\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -4304,14 +4294,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
-  }
-  .laptop\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-  .laptop\:text-xl {
-    font-size: 1.25rem;
-    line-height: 2rem;
   }
   .laptop\:font-semibold {
     font-weight: 600;
@@ -4328,6 +4310,17 @@ Ensure the default browser behavior of the `hidden` attribute.
     --tw-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     --tw-shadow-colored: 0px 4px 8px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+  .laptop\:transition-all {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+  .laptop\:duration-200 {
+    transition-duration: 200ms;
+  }
+  .laptop\:ease-in-out {
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
   .laptop\:hover\:translate-y-\[-5px\]:hover {
     --tw-translate-y: -5px;
@@ -4459,13 +4452,13 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-top: 5rem;
     margin-bottom: 5rem;
   }
-  .desktop\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
   .desktop\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+  .desktop\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
   }
   .desktop\:mt-24 {
     margin-top: 6rem;
@@ -4557,6 +4550,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:max-w-\[100px\] {
     max-width: 100px;
   }
+  .desktop\:max-w-\[500px\] {
+    max-width: 500px;
+  }
+  .desktop\:max-w-\[1000px\] {
+    max-width: 1000px;
+  }
   .desktop\:max-w-\[600px\] {
     max-width: 600px;
   }
@@ -4568,18 +4567,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:max-w-\[220px\] {
     max-width: 220px;
-  }
-  .desktop\:max-w-\[900px\] {
-    max-width: 900px;
-  }
-  .desktop\:max-w-\[1000px\] {
-    max-width: 1000px;
-  }
-  .desktop\:max-w-\[400px\] {
-    max-width: 400px;
-  }
-  .desktop\:max-w-\[500px\] {
-    max-width: 500px;
   }
   .desktop\:flex-1 {
     flex: 1 1 0%;
@@ -4678,6 +4665,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 8rem;
     line-height: 1;
   }
+  .desktop\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+  .desktop\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
   .desktop\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -4689,14 +4684,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
-  }
-  .desktop\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-  .desktop\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
   .desktop\:leading-6 {
     line-height: 1.5rem;
